[package]
name = "fragile-sky"
version = "0.1.0"
authors = ["Ellis Hoag <ellis.sparky.hoag@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hal = { package = "esp32c6-hal", version = "0.3.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c6"] }
esp-hal-smartled = { version = "0.3.0", features = ["esp32c6"] }
# esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = ["esp32c6", "embedded-svc", "wifi"] }
esp-wifi = { git = "https://github.com/ellishg/esp-wifi.git", branch = "floor-hack", features = ["esp32c6", "embedded-svc", "wifi"] }
httparse = { version = "1.8.0", default-features = false, features = [] }
# https://github.com/caemor/epd-waveshare/pull/145
epd-waveshare = { git = "https://github.com/tomgilligan/epd-waveshare.git", branch ="epd2in13b_v4" }
embedded-graphics = "0.7.1"
embedded-svc = { version = "0.25.1", default-features = false, features = [] }
embedded-io = "0.4.0"
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
smart-leds = "0.3.0"
serde_json = { version = "1.0.103", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.24", default-features = false }
spin = "0.9.8"
esp-alloc = "0.3.0"

[profile.release]
# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#lto
lto = "off"

[profile.dev]
# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#lto
lto = "off"


# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#optimization-level
[profile.release.package.esp-wifi]
opt-level = 2

# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#optimization-level
[profile.dev.package.esp-wifi]
opt-level = 2
