[package]
name = "fragile-sky"
version = "0.1.0"
authors = ["Ellis Hoag <ellis.sparky.hoag@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hal = { package = "esp32c6-hal", version = "0.5.0" }
esp-backtrace = { version = "0.8.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c6"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "16afb0fe3c46e2ccf698bf52bfec5230ffad1cad", features = ["esp32c6", "embedded-svc", "wifi"] }
httparse = { version = "1.8.0", default-features = false, features = [] }
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git", rev = "97425d5a5b7798b73c52e258a958309f017fa010" }
embedded-graphics = "0.7.0"
embedded-svc = { version = "0.25.3", default-features = false, features = [] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "proto-dns", "socket-tcp", "socket-icmp", "socket-udp", "socket-dns", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
serde_json = { version = "1.0.103", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.24", default-features = false }
esp-alloc = "0.3.0"
thiserror-no-std = "2.0.2"
anyhow = { version = "1.0.75", default-features = false }

[profile.release]
# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#lto
lto = "off"

[profile.dev]
# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#lto
lto = "off"

# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#optimization-level
[profile.release.package.esp-wifi]
opt-level = 2

# https://github.com/esp-rs/esp-wifi/tree/f80df630a887b27fa63fb2043fd2a432d431ac2f#optimization-level
[profile.dev.package.esp-wifi]
opt-level = 2
